discussion/kv_engine/180309/180309_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Add SchedulingMonitor to track system scheduling latency

Add a new class that runs a callback for a given interval and
tracks how long it took the callback to run, allowing KV to
expose a scheduling latency statistic.

Change-Id: Id58be49322f4abd8c9b48626031be216a46e1d46

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-09-22 14:37:15.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-22 15:07:20.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20600/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/scheduling_monitor.h:39:11: error: use of undeclared identifier "std" [clang-diagnostic-error]
    const std::chrono::milliseconds interval{100};
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/scheduling_monitor.h:42:11: error: use of undeclared identifier "std" [clang-diagnostic-error]
    const std::chrono::milliseconds warnTolerance{100};
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/scheduling_monitor.h:45:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::chrono::steady_clock::time_point start;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/scheduling_monitor.h:48:5: error: unknown type name "size_t" [clang-diagnostic-error]
    size_t accumulativeDifference{0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/scheduling_monitor.h:50:5: error: unknown type name "size_t" [clang-diagnostic-error]
    size_t samples{0};
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20600/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/scheduling_monitor.h:39:11:
error: use of undeclared identifier "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20600/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49618/ : FAILURE

Failure of GoogleTest "FullEviction/EPBucketFullEvictionTest.ExpiryFindNonResidentItem/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] FullEviction/EPBucketFullEvictionTest.ExpiryFindNonResidentItem/persistent_couchstore_full_eviction
..\kv_engine\engines\ep\tests\module_tests\evp_store_test.cc(645): error: Expected equality of these values:
  cb::engine_errc::success
    Which is: success
  q[diskDocKey].value.getStatus()
    Which is: no such key
unknown file: error: SEH exception with code 0xc0000005 thrown in the test body.
[  FAILED  ] FullEviction/EPBucketFullEvictionTest.ExpiryFindNonResidentItem/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (1546 ms)
FullEviction/EPBucketFullEvictionTest.ExpiryFindNonResidentItem/persistent_couchstore_full_eviction
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49618/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41702/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/scheduling_monitor.h:39:11:
error: use of undeclared identifier "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41702/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23755/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [68/91]: dcp erroneous snapshot marker scenario...../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3045 Test failed: `" (Expected `GET_ERROR_MAP", got `DCP_CONTROL" - Unexpected last_op)
[2022-09-22T14:54:35.263Z] (1393 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23755/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19825/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10311/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10411/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22580/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21970/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22954/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30983/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2022-11-04 11:24:13.000000000
Message: 
Abandoned

on backburner - not sure if this works at all
----------------------------------------------------------------------------------------------------------------------
